--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/viewpager": "^5.0.11",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -20,10 +20,10 @@
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "^4.8.0",
-    "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
