--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "async-storage": "^0.1.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "picker": "^0.1.4",
