--- a/app.json
+++ b/app.json
@@ -31,6 +31,12 @@
       "eas": {
         "projectId": "f5c5dc95-1a49-4423-a974-0a037eed204c"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f5c5dc95-1a49-4423-a974-0a037eed204c"
     }
   }
 }
